Use kCGImageSourceCreateUnpremultipliedPNG on iOS family to correctly read PNG files without premultiplication. https://bugs.webkit.org/show_bug.cgi?id=240137 <rdar://93198134>

Patch by John Cunningham <johncunningham@apple.com> on 2022-05-23
Reviewed by Simon Fraser.

* Source/WTF/wtf/PlatformHave.h:
* Source/WebCore/platform/graphics/cg/ImageDecoderCG.cpp:
(WebCore::createImageSourceOptions):

Canonical link: https://commits.webkit.org/250880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294660 268f45cc-cd09-0410-ab3c-d52691b4dbfc